Add vercel.json and fix deployment configuration

--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="UTF-8" />
-<link rel="icon" type="image/png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet" />
-  <title>Physiotattva - Premium Physiotherapy Care</title>
-</head>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-<body>
-  <div id="root"></div>
-  <!-- script injected by react-scripts -->
-</body>
+    <title>Physiotattva - Premium Physiotherapy Care</title>
 
+    <!-- Main CSS -->
+    <link href="/static/css/main.c0c1ae41.css" rel="stylesheet" />
+
+    <!-- Main JS -->
+    <script defer src="/static/js/main.63e9e5da.js"></script>
+  </head>
+
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
