--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#0D2137" />
+    <meta name="description" content="Physiotattva - Premium Physiotherapy Care. Expert physiotherapists providing personalized treatment for pain relief, rehabilitation, and wellness." />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,15 +16,14 @@
     />
 
     <title>Physiotattva - Premium Physiotherapy Care</title>
-
-    <!-- Main CSS -->
-    <link href="/static/css/main.c0c1ae41.css" rel="stylesheet" />
-
-    <!-- Main JS -->
-    <script defer src="/static/js/main.63e9e5da.js"></script>
   </head>
 
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!--
+      CRA will automatically inject the correct CSS and JS files here during the build.
+      Do NOT manually add script or link tags for main.js or main.css.
+    -->
   </body>
 </html>
